<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="complaint_detail"
            type="com.noida.authority.response_model.ComplaintResponse" />

        <variable
            name="clickHandler"
            type="com.noida.authority.activity.ComplaintDetailsActivity.EventHandler" />
        <variable
            name="activity"
            type="com.noida.authority.activity.ComplaintDetailsActivity" />

    </data>




    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="start"
                    android:text="@string/ref_no_202042140003639"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_12"
                    android:background="@drawable/btn_selector"
                    android:backgroundTint="#FFF9E7"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_4"
                    android:paddingBottom="@dimen/dp_4"
                    android:paddingRight="@dimen/dp_12"
                    android:text="@string/validation_pending"
                    android:textColor="#F3AA0D"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:text="@string/department"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.department}"
                        android:textColor="@color/colorTextBlue"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_8"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:text="Subject/Nature/ Complaint Type"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.service}"
                        android:textColor="@color/colorTextBlue"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_12"
                android:fontFamily="@font/lato_bold"
                android:text="@string/allottee_information"
                android:textAllCaps="true"
                android:textColor="@color/colorTextBlue"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:text="@string/name"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.name}"
                        android:textColor="@color/colorTextBlue"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:text="@string/mobile"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.mobile}"
                        android:textColor="@color/colorTextBlue"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:text="@string/email"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.email}"
                        android:textColor="@color/colorTextBlue"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:text="@string/communication_address"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.address}"
                        android:textColor="@color/colorTextBlue"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_12"
                android:fontFamily="@font/lato_bold"
                android:text="@string/location_of_the_complaint"
                android:textAllCaps="true"
                android:textColor="@color/colorTextBlue"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/sector"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.sector}"
                        android:textColor="#636363"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/village"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.village}"
                        android:textColor="#636363"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/plot_no"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.plotNo}"
                        android:textColor="#636363"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/address_description"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/sp_14" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start"
                        android:text="@={complaint_detail.address}"
                        android:textColor="#636363"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_35"
                android:layout_marginBottom="@dimen/dp_25"
                android:background="@drawable/btn_selector"
                android:fontFamily="@font/lato_semibold"
                android:text="Edit"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
</layout>

